--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap');
+@import 'tailwindcss';
 
 :root {
   --background: hsl(51 32% 100%);
@@ -10,6 +11,7 @@
   }
 }
 
+/*
 *,
 *::before,
 *::after {
@@ -25,9 +27,9 @@ body {
 }
 
 html {
-  font-size: 112.5%; /* 18px */
+  font-size: 112.5%; 
   @media screen and (min-width: 80rem) {
-    font-size: 125%; /* 20px */
+    font-size: 125%; 
   }
 }
 
@@ -86,3 +88,13 @@ section {
   text-align: center;
   margin-top: 1rem;
 }
+#tasks {
+  margin-top: 1rem;
+  max-width: 400px;
+  margin: 0 auto;
+  .task {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+*/
