--- a/src/components/Task.astro
+++ b/src/components/Task.astro
@@ -13,17 +13,23 @@ const { todo, mode='' } = Astro.props;
     mode === 'edit' ? (
       <form class="flex justify-between w-full items-center" hx-put={`/api/todos?id=${todo.id}`}
     hx-target="closest div.todo"
-    hx-swap="outerHTML" >
+    hx-swap="outerHTML" 
+    hx-indicator="#save">
       <input
         class="border border-gray-300 rounded p-2"
         type="text"
         value={todo.text}
         name="text"
       />
-      <button
+      <button type="button" id="delete"
+    class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded" hx-delete={`/api/todos?id=${todo.id}`} hx-target="closest div.todo" hx-swap="outerHTML" hx-indicator="#delete"
+    
+    ><span class="text">Delete</span> <Spinner  class="htmx-indicator" />
+  </button>
+      <button id="save"
     class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded"
     
-    ><span class="text">Save</span> <Spinner class="htmx-indicator" />
+    ><span class="text">Save</span> <Spinner  class="htmx-indicator" />
   </button>
   </form>
      ): (
@@ -41,21 +47,3 @@ const { todo, mode='' } = Astro.props;
   
 </div>
 
-<style>
-  .htmx-indicator {
-  display: none;
-}
-.htmx-request {
-  .text{
-    display: none;
-  }
-  .htmx-indicator {
-  display: inline;
-  }
-  &.htmx-indicator {
-  display: inline;
-  
-  }
-}
-
-</style>
