--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '@/layouts/Layout.astro';
 import { db, Tasks } from 'astro:db';
 import Task from '@/components/Task.astro';
+import Spinner from '@/components/Spinner.astro';
 
 // run only once at the start after pushed to remote
 // import seed from 'db/seed';
@@ -33,6 +34,7 @@ const tasks = await db.select().from(Tasks).all();
       hx-post="/api/todos"
       hx-target="#tasks"
       hx-swap="beforeend"
+      hx-indicator="#add"
     >
       <input
         id="new-todo"
@@ -43,7 +45,11 @@ const tasks = await db.select().from(Tasks).all();
         required
       />
 
-      <button class="border rounded p-2 cursor-pointer">Add Task</button>
+      <button
+        id="add"
+        class="bg-lime-500 hover:bg-lime-700 text-white font-bold py-2 px-4 rounded"
+        ><span class="text">Add Task</span> <Spinner class="htmx-indicator" />
+      </button>
     </form>
   </section>
 </Layout>
