--- a/src/components/Task.astro
+++ b/src/components/Task.astro
@@ -11,18 +11,18 @@ console.log(todo);
 >
   {
     mode === 'edit' ? (
-      <form class="flex justify-between w-full items-center" hx-put={`/api/todos?id=${todo.id}`}
+      <form class="flex justify-between items-center gap-2" hx-put={`/api/todos?id=${todo.id}`}
     hx-target="closest div.todo"
     hx-swap="outerHTML" 
     hx-indicator="#save">
       <input
-        class="border border-gray-300 rounded p-2"
+        class="border border-gray-300 rounded p-2 w-full"
         type="text"
         value={todo.text}
         name="text"
       />
       <button type="button" id="delete"
-    class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded cursor-pointer" hx-delete={`/api/todos?id=${todo.id}`} hx-target="closest div.todo" hx-swap="outerHTML" hx-indicator="#delete"
+    class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded cursor-pointer ml-auto" hx-delete={`/api/todos?id=${todo.id}`} hx-target="closest div.todo" hx-swap="outerHTML" hx-indicator="#delete"
     
     ><span class="text">Delete</span> <Spinner  class="htmx-indicator" />
   </button>
