--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,8 +15,15 @@ const { title } = Astro.props;
     <title>{title}</title>
     <script src="@/lib/htmx.org.ts"></script>
   </head>
-  <body hx-boost="true">
-    <slot />
+  <body hx-boost="true" class="flex flex-col min-h-screen bg-gray-200">
+    <main class="flex-grow">
+      <slot />
+    </main>
+    <footer class="px-2 py-4 text-gray-500 text-center">
+      <p>Stack: Astro, HTMX, Tailwind</p>
+      <p>No Javascript on client side (except HTMX)</p>
+      <p>Copyright &copy; Unibox {new Date().getFullYear()}</p>
+    </footer>
     <script src="@/lib/app.ts"></script>
   </body>
 </html>
