--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const tasks = await db.select().from(Tasks).all();
     HTMX not working
   </h3>
   <h1 class="text-center text-3xl py-4">Todos List</h1>
-  <section id="tasks" class="max-w-sm mx-auto px-2">
+  <section id="tasks" class="max-w-sm mx-auto px-2 w-full">
     {tasks.map((todo) => <Task todo={todo} />)}
   </section>
   <section id="todo-form" class="max-w-sm mx-auto mt-8">
@@ -37,7 +37,7 @@ const tasks = await db.select().from(Tasks).all();
     >
       <input
         id="new-todo"
-        class="border rounded p-2"
+        class="border rounded p-2 border-lime-500"
         type="text"
         name="text"
         placeholder="New Task"
@@ -45,7 +45,7 @@ const tasks = await db.select().from(Tasks).all();
 
       <button
         id="add"
-        class="bg-lime-500 hover:bg-lime-700 text-white font-bold py-2 px-4 rounded"
+        class="bg-lime-500 hover:bg-lime-700 text-white font-bold py-2 px-4 rounded cursor-pointer"
         ><span class="text">Add Task</span> <Spinner class="htmx-indicator" />
       </button>
     </form>
