--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,15 +12,7 @@ const tasks = await db.select().from(Tasks).all();
 ---
 
 <Layout>
-  <h3
-    class="text-center text-xl py-2 text-gray-400"
-    id="message"
-    hx-get="/api/message"
-    hx-trigger="load"
-  >
-    HTMX not working
-  </h3>
-  <h1 class="text-center text-3xl py-4">Todos List</h1>
+  <h1 class="text-center text-3xl py-8">Todo List</h1>
   <section id="tasks" class="max-w-sm mx-auto px-2 w-full">
     {tasks.map((todo) => <Task todo={todo} />)}
   </section>
