--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,8 +24,8 @@ const { title } = Astro.props;
       <p>
         <span class="font-bold">Stack: </span>Astro, HTMX, Tailwind, Turso DB
       </p>
-      <p>Only server side rendering</p>
-      <p>No Javascript on client side (except HTMX)</p>
+      <p>Server side rendering only</p>
+      <p>No client side Javascript (except HTMX)</p>
       <p>Copyright &copy; Unibox {new Date().getFullYear()}</p>
     </footer>
     <script src="@/lib/app.ts"></script>
