--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/png" href="/todo-list2.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <meta name="description" content="A simple todo list app" />
     <script src="@/lib/htmx.org.ts"></script>
   </head>
   <body hx-boost="true" class="flex flex-col min-h-screen bg-gray-200">
